# Assemble-and-Animate

./: .cproject  .gitignore  .gitmodules  .project  README
apps/dummy/: CMakeLists.txt  Makefile  do_SPSA-ffANN.bat  do_bpANN.bat
apps/dummy/controllers/ANN-test/: CMakeLists.txt  controller.c
apps/dummy/controllers/GA-test/: CMakeLists.txt  controller.c
apps/dummy/controllers/GANN-test/: CMakeLists.txt  controller.c
apps/dummy/controllers/LuiTraner/: controller.c
apps/dummy/controllers/PSOANN-test/: CMakeLists.txt  controller.c
apps/dummy/controllers/Playback/: controller.c  makefile
apps/dummy/controllers/PrintfBuffered/: controller.c
apps/dummy/controllers/SPSA/: CMakeLists.txt  controller.c
apps/dummy/controllers/SPSA-ffANN-test/: CMakeLists.txt  controller.c
apps/dummy/controllers/SPSANN-test/: CMakeLists.txt  controller.c
apps/dummy/controllers/bpANN-test/: CMakeLists.txt  controller.c  old_controller.c
apps/dummy/controllers/kNN-test/: controller.c
apps/dummy/controllers/timer/: CMakeLists.txt  controller.c  makefile
apps/dummy/dummy/: Makefile  do_SPSA-ffANN-test.bat  startDummy.c
libASE/: CMakeLists.txt  Makefile  clean_c_make  reformater
libASE/doc/: Doxyfile  todo.txt
libASE/doc/html/: ASEMain_8c.html  ASEMain_8h-source.html  ASEMain_8h.html  AbstractAtronApi_8h-source.html  AbstractAtronSocketApi_8c_source.html  AbstractAtronSocketApi_8h-source.html  AbstractAtronSocketApi_8h.html  AbstractAtronTosApi_8c_source.html  AbstractAtronTosApi_8h-source.html  AbstractAtronTosApi_8h.html  AbstractDummyApi_8c_source.html  AbstractDummyApi_8h.html  AbstractDummyApi_8h_source.html  AbstractDynamixelApi_8h-source.html  AbstractDynamixelApi_8h.html  AbstractLMFApi_8c_source.html  AbstractLMFApi_8h_source.html  AbstractLPFApi_8c_source.html  AbstractLPFApi_8h.html  AbstractLPFApi_8h_source.html  AbstractMTRANSocketApi_8c_source.html  AbstractMTRANSocketApi_8h-source.html  AbstractMTRANSocketApi_8h_source.html  AbstractModuleApi_8h-source.html  AbstractModuleApi_8h.html  AbstractModuleApi_8h_source.html  AbstractOdinApi_8c_source.html  AbstractOdinApi_8h-source.html  AbstractOdinApi_8h_source.html  AbstractRoombotApi_8c_source.html  AbstractRoombotApi_8h-source.html  AbstractRoombotApi_8h.html  AbstractRoombotApi_8h_source.html  Actuator_8c.html  Actuator_8h-source.html  Actuator_8h.html  AtronApi_8h-source.html  AtronApi_8h.html  AtronApi_8h_source.html  AtronSocketApi_8c.html  (+998 more)
libASE/doc/html/search/: all_5f.html  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_67.html  all_68.html  all_69.html  all_6b.html  all_6c.html  all_6d.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_67.html  classes_68.html  classes_69.html  classes_6b.html  classes_6c.html  classes_6d.html  classes_70.html  classes_72.html  classes_73.html  classes_74.html  defines_61.html  defines_62.html  defines_67.html  defines_6d.html  defines_70.html  files_61.html  files_62.html  files_63.html  (+30 more)
libASE/doc/latex/: ASEMain_8c.tex  ASEMain_8h.tex  AbstractAtronSocketApi_8h.tex  AbstractAtronTosApi_8h.tex  AbstractDynamixelApi_8h.tex  AbstractModuleApi_8h.tex  AbstractRoombotApi_8h.tex  Actuator_8c.tex  Actuator_8h.tex  AtronApi_8h.tex  AtronSocketApi_8c.tex  AtronSocketApi_8h.tex  AtronStatus_8h.tex  AtronTosApi_8h.tex  Broadcaster_8h.tex  CPGManager_8h.tex  CentralPatternGenerator_8h.tex  Clock_8c.tex  Clock_8h.tex  CnoCpgManager_8h.tex  CnoCpg_8h.tex  CommDefs_8h.tex  CommDevice_8c.tex  CommDevice_8h.tex  CommandSender_8c.tex  CommandSender_8h.tex  Component_8c.tex  Component_8h.tex  ConfigASE_8h.tex  Connector_8c.tex  Connector_8h.tex  ConsensusAverage_8h.tex  CpgGait_8h.tex  CpgSuperManager_8h.tex  CpgSuper_8h.tex  DistributedStateManager_8h.tex  DistributedStateMerger_8h.tex  DynamixelApi_8h.tex  DynamixelD2UApi_8h.tex  Entity_8h.tex  (+295 more)
libASE/include/ase/: framework.h
libASE/include/ase/communication/: CommDefs.h  Message.h
libASE/include/ase/config/: ConfigASE.h
libASE/include/ase/targets/: AbstractModuleApi.h  atron.h  dummy.h  dynamixel.h  fable.h  lpf.h  mtran.h  odin-ussr.h  roombot-webots.h
libASE/include/ase/targets/lpf/: LPFApi.h  (+2 more)
libASE/lib/: Makefile
libASE/lib/atron-tos/: Makefile
libASE/lib/atron-ussr/: Makefile
libASE/lib/dummy/: Makefile
libASE/lib/dynamixel-cm510/: Makefile
libASE/lib/dynamixel-d2u/: Makefile
libASE/lib/khepera/: Makefile
libASE/lib/khepera-webots/: Makefile
libASE/lib/lpf/: Makefile
libASE/lib/mtran-ussr/: Makefile
libASE/lib/odin-ussr/: Makefile
libASE/lib/roombot-webots/: Makefile
libASE/src/: CMakeLists.txt  Makefile  Makefile.atron-fpga  Makefile.atron-tinyos  Makefile.atron-ussr  Makefile.dummy  Makefile.dynamixel-CM510  Makefile.dynamixel-d2u  Makefile.khepera-webots  Makefile.lpf-firmware  Makefile.mtran-ussr  Makefile.odin-contiki  Makefile.odin-ussr  Makefile.roombot-webots  Makefile.target
libASE/src/communication/Broadcast/: Broadcaster.c
libASE/src/communication/Gossip/: GossipManager.c
libASE/src/communication/SharedTimer/: SharedTimer.c
libASE/src/communication/StateSharing/: StateSharing.c
libASE/src/infrastructure/Entity/: Entity.c
libASE/src/infrastructure/EventManager/: EventManager.c
libASE/src/infrastructure/MemManager/: MemManager.c
libASE/src/infrastructure/MsgManager/: MsgManager.c
libASE/src/infrastructure/Scheduler/: Scheduler.c
libASE/src/infrastructure/SingleComponent/: SingleComponent.c
libASE/src/targets/dummy/: AbstractDummyApi.c  CMakeLists.txt
libASE/src/targets/dynamixel/: DynamixelApi.c
libASE/src/targets/fable/: AbstractFableApi.c  CMakeLists.txt  CMakeLists.txt~  FableApi.c
libASE/src/test/helloworld/: Hello-world.c
libASE/src/tools/IDContainer/: IDContainer.c
libASE/src/tools/LinkedList/: LinkedList.c
libASE/src/tools/RewardCollector/: RewardCollector.c
libASE/src/tools/Runge-Kutta/: RK4.c
libASE/src/tools/Timer/: TimerManager.c
libASE/src/utils/socket-tools/: CommandSender.c  EventListner.c  SimpleSocket.c
(+416 files in other folders)
